--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import './styles/styles.scss';
+@import 'react-toastify/dist/ReactToastify.css';
 
 body {
   margin: 0;
